# taskgrid.app

./: .gitignore  README.md  add-columns.js  check-current-schema.js  check-db.js  check-schema.js  migrate-db.js  opencode.json  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tailwind.config.js.bak  verify-db.js
.agents/skills/task-clarification/: SKILL.md
.agents/skills/task-creation/: SKILL.md
.archive/: TASKMANAGER.md
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
design/: task-grid.html
design/stitch_task_grid_canvas_view/task_grid_canvas_view_2/: code.html
design/stitch_task_grid_canvas_view/zoomable_brutalist_task_grid_1/: code.html
design/stitch_task_grid_canvas_view/zoomable_brutalist_task_grid_2/: code.html
scripts/: copy-skills.js
src/: App.svelte  app.css  app.html  db.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/.agents/skills/about-taskgrid/: SKILL.md
src-tauri/resources/.agents/skills/task-clarification/: SKILL.md
src-tauri/src/: main.rs
src/components/: FileTree.svelte  OpenRouterConfig.svelte
src/lib/: TaskGrid.svelte  TaskModal.svelte  config.json  filesystem.ts  openrouter.ts  tasks.db
src/lib/server/: db.js  tasks.db
src/routes/: +layout.svelte  +page.svelte  +page.svelte.bak
src/stores/: theme.svelte.ts
te9.dev/: .initialized
te9.dev/specs/: specs.json
te9.dev/specs/SPEC-1737400800-0875b1c7/: context.json  spec.md
te9.dev/specs/SPEC-1768932478-TASKGRID/: context.json  spec.md
(+6 files in other folders)
